src/objects/Quality_Assurance_Collections_Report__c.object
<CustomObject>
    <fields>
        <fullName>X1_Comments__c</fullName>
        <label>1. Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1_Greeting_Company_Name_UW_Name__c</fullName>
        <label>1. Agent mentioned company, dept, name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2_Comments__c</fullName>
        <label>2. Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2_Convenient_to_continue_question__c</fullName>
        <label>2. Asked how they could help</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_Comments__c</fullName>
        <label>3. Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3_Security_ID_checks_as_per_policy__c</fullName>
        <inlineHelpText>Was Data Protection Policy adhered to? 3 or more security questions. E.g. Full name, DOB, email address, postcode.</inlineHelpText>
        <label>3. Data Protection policy adhered to?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4_Reason_for_Call__c</fullName>
        <inlineHelpText>ACCOUNT INFORMATION: Did the agent check customer details and any relevant previous notes to ensure up to date?</inlineHelpText>
        <label>4. ACCOUNT INFO: Checked details/notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X5_Call_closed_if_ID_Checks_failed__c</fullName>
        <inlineHelpText>REPAYMENT METHODS: Were different repayment methods offered to customer where possible and were necessary direct debit details discussed and confirmed correctly if one is not in place?</inlineHelpText>
        <label>5. REASON FOR MISSED PAYMENT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X6_FURTHER_PROBING__c</fullName>
        <inlineHelpText>FURTHER PROBING: Did the agent ask sufficient questions to understand the customer&apos;s financial situation?</inlineHelpText>
        <label>6.FURTHER PROBING: Sufficient Questions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X7_ARREARS_BALANCE__c</fullName>
        <label>7. ARREARS BALANCE: Customer Informed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X8_REPAYMENT_METHODS__c</fullName>
        <inlineHelpText>REPAYMENT METHODS: Were different repayment methods offered to customer where possible and were necessary direct debit details discussed and confirmed correctly if one is not in place??</inlineHelpText>
        <label>8. REPAYMENT METHODS: Options Offered?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X9_CONSEQUENCES__c</fullName>
        <inlineHelpText>CONSEQUENCES: Did the agent advise of possible effect to credit file due to missing payments?</inlineHelpText>
        <label>9. CONSEQUENCES: Effect to Credit File?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quality Assurance Collections Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QACol-{0000}</displayFormat>
        <label>Quality Assurance Collection Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assurance Collections Reports</pluralLabel>
    <recordTypes>
        <fullName>Approved_Scorecard</fullName>
        <active>true</active>
        <label>Approved Scorecard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Call_Quality_Scorecard</fullName>
        <active>true</active>
        <label>Call Quality Scorecard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cancellation_Case_Scorecard</fullName>
        <active>true</active>
        <label>Cancellation Case Scorecard</label>
    </recordTypes>
    <recordTypes>
        <fullName>CiFAS_Scorecard</fullName>
        <active>true</active>
        <label>CiFAS Scorecard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Decline_Scorecard</fullName>
        <active>true</active>
        <label>Decline Scorecard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>